// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-switch renders 1`] = `
<rux-switch aria-checked="false" class="rux-form-field" role="switch" value="">
  <mock:shadow-root>
    <div class="rux-switch">
      <input aria-checked="false" class="rux-switch__input" id="rux-switch-3" role="switch" type="checkbox" value="">
      <label class="rux-switch__button" htmlfor="rux-switch-3">
        <span class="hidden rux-switch__label">
          <slot name="label"></slot>
        </span>
      </label>
    </div>
  </mock:shadow-root>
</rux-switch>
`;

exports[`rux-switch renders label prop 1`] = `
<rux-switch aria-checked="false" class="rux-form-field" label="hello" role="switch" value="">
  <mock:shadow-root>
    <div class="rux-switch">
      <input aria-checked="false" class="rux-switch__input" id="rux-switch-4" role="switch" type="checkbox" value="">
      <label class="rux-switch__button" htmlfor="rux-switch-4">
        <span class="rux-switch__label">
          <slot name="label">
            hello
          </slot>
        </span>
      </label>
    </div>
  </mock:shadow-root>
</rux-switch>
`;

exports[`rux-switch renders label slot 1`] = `
<rux-switch aria-checked="false" class="rux-form-field" role="switch" value="">
  <mock:shadow-root>
    <div class="rux-switch">
      <input aria-checked="false" class="rux-switch__input" id="rux-switch-5" role="switch" type="checkbox" value="">
      <label class="rux-switch__button" htmlfor="rux-switch-5">
        <span class="rux-switch__label">
          <slot name="label"></slot>
        </span>
      </label>
    </div>
  </mock:shadow-root>
  <div slot="label">
    hello
  </div>
</rux-switch>
`;
